[package]
name = "fraction"
version = "0.3.5"
authors = ["dnsl48 <dnsl48@gmail.com>"]

description = "Fraction is a lossless float type implementation that can be used for matching, ordering and hashing"
keywords = ["fractions", "floats", "numerics"]
categories = ["data-structures"]

license = "MIT/Apache-2.0"

homepage = "https://github.com/dnsl48/fraction.git"
repository = "https://github.com/dnsl48/fraction.git"
documentation = "https://docs.rs/fraction/"
readme = "README.md"


[dependencies]


[dependencies.num]
version = "0.1.37"
default-features = false
features = ["bigint", "rational"]