[package]
name = "fraction"
version = "0.4.0"
authors = ["dnsl48 <dnsl48@gmail.com>"]

description = "Precise and lossless float replacement"
keywords = ["decimal", "fraction", "float", "numeric"]
categories = ["data-structures"]

license = "MIT/Apache-2.0"

homepage = "https://github.com/dnsl48/fraction.git"
repository = "https://github.com/dnsl48/fraction.git"
readme = "README.md"

# TODO: revert to docs.rs when it gets Rust updated
documentation = "https://dnsl48.github.io/fraction/target/doc/fraction/index.html"  # "https://docs.rs/fraction/"


exclude = ["src/tests/division/*"]


[package.metadata.docs.rs]
all-features = true

[dependencies]

num = { version =  "^0.2", default-features = false }

byteorder = { version = "^1", optional = true }
postgres = { version = ">=0.15.2,<0.16", optional = true }

serde = { version = "^1", optional = true }
serde_derive = { version = "^1", optional = true }

juniper = { version = ">=0.9,<0.11", optional = true }

lazy_static = { version = "1.1.0", optional = true }


[features]
default = ["with-bigint", "with-decimal", "with-dynaint"]

with-bigint = ["num/num-bigint", "num/std", "lazy_static"]
with-decimal = []
with-dynaint = []

with-juniper-support = ["juniper"]
with-postgres-support = ["postgres", "byteorder"]
with-serde-support = ["serde", "serde_derive", "num/serde"]